Nathnael big changes (Frontend Redesign & Internal Dashboard Improvements) (#360)
* A lot of things

* last min stuff

* contrubters section

* A lot of frontend redesigns for internal part of website
